syntax = "proto3";

package io.iohk.cvp;

service AdminService {
  rpc PopulateDemoDataset(PopulateDemoDatasetRequest) returns (PopulateDemoDatasetResponse) {}
}

message PopulateDemoDatasetRequest {

}

message PopulateDemoDatasetResponse {
  string message = 1;
}
